@@ -46,6 +46,8 @@ test {
         '--enable-native-access=ALL-UNNAMED',
         '--add-opens', 'java.base/java.io=ALL-UNNAMED',
         '--add-opens', 'java.base/java.nio=ALL-UNNAMED',
+        '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED',
+        '--add-modules', 'jdk.incubator.vector',
         '--enable-preview'
     ]
 }
